[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/objects/Doors/Side Door/Door_left_front2.png" type="Texture" id=1]
[ext_resource path="res://assets/objects/Doors/Side Door/Door_left_back1.png" type="Texture" id=2]
[ext_resource path="res://assets/objects/Doors/Side Door/Door_left_front1.png" type="Texture" id=3]
[ext_resource path="res://assets/objects/Doors/Side Door/Door_left_front4.png" type="Texture" id=4]
[ext_resource path="res://assets/objects/Doors/Side Door/Door_left_front3.png" type="Texture" id=5]
[ext_resource path="res://assets/objects/Doors/Side Door/Door_left_back3.png" type="Texture" id=6]
[ext_resource path="res://assets/objects/Doors/Side Door/Door_left_back4.png" type="Texture" id=7]
[ext_resource path="res://assets/objects/Doors/Side Door/Door_left_back2.png" type="Texture" id=8]
[ext_resource path="res://assets/objects/Doors/Side Door/Door_left_back5.png" type="Texture" id=9]
[ext_resource path="res://assets/objects/Doors/Side Door/Door_left_front5.png" type="Texture" id=10]
[ext_resource path="res://DoorSide.gd" type="Script" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 2 ) ],
"loop": false,
"name": "Close",
"speed": 10.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 9 ) ],
"loop": false,
"name": "Open",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40, 14 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 40, 14 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "Close",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 10 ) ],
"loop": true,
"name": "Open",
"speed": 5.0
} ]

[sub_resource type="Animation" id=5]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("PreventPassage:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Backside:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 5.27803, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Backside:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Close" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Frontside:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Frontside:animation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Close" ]
}

[sub_resource type="Animation" id=6]
resource_name = "CloseRight"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("PreventPassage:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Backside:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 5.27803, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Backside:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Close" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Frontside:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Frontside:animation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Close" ]
}

[sub_resource type="Animation" id=7]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("PreventPassage:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Backside:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 5.27803, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Backside:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Open" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Frontside:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Frontside:animation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Open" ]
}

[sub_resource type="Animation" id=8]
resource_name = "OpenRight"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("PreventPassage:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Backside:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 5.27803, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Backside:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Open" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Frontside:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Frontside:animation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Open" ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Backside:offset")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 11, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Backside:flip_h")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Frontside:offset")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 11, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Frontside:flip_h")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 4, 20 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 16, 21 )

[node name="DoorSide" type="StaticBody2D"]
script = ExtResource( 11 )

[node name="Backside" type="AnimatedSprite" parent="."]
z_index = -10
frames = SubResource( 1 )
animation = "Open"
offset = Vector2( 11, 0 )
flip_h = true

[node name="BackLower" type="Area2D" parent="Backside"]
position = Vector2( -6, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Backside/BackLower"]
position = Vector2( 6, 2 )
shape = SubResource( 2 )

[node name="BackUpper" type="Area2D" parent="Backside"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Backside/BackUpper"]
position = Vector2( 0, -22 )
shape = SubResource( 3 )

[node name="Frontside" type="AnimatedSprite" parent="."]
z_index = 10
frames = SubResource( 4 )
animation = "Open"
offset = Vector2( 11, 0 )
flip_h = true

[node name="FrontLower" type="Area2D" parent="Frontside"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Frontside/FrontLower"]
position = Vector2( 0, 28 )
shape = SubResource( 2 )

[node name="FrontUpper" type="Area2D" parent="Frontside"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Frontside/FrontUpper"]
position = Vector2( 0, 4 )
shape = SubResource( 2 )

[node name="AnimationHandler" type="AnimationPlayer" parent="."]
anims/CloseLeft = SubResource( 5 )
anims/CloseRight = SubResource( 6 )
anims/OpenLeft = SubResource( 7 )
anims/OpenRight = SubResource( 8 )

[node name="PreventPassage" type="CollisionShape2D" parent="."]
position = Vector2( 6, 20 )
shape = SubResource( 9 )

[node name="interact_field" type="Area2D" parent="."]
position = Vector2( 5, 20 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="interact_field"]
position = Vector2( 0, -1 )
shape = SubResource( 10 )
[connection signal="body_entered" from="Backside/BackLower" to="." method="_on_BackLower_body_entered"]
[connection signal="body_entered" from="Backside/BackUpper" to="." method="_on_BackUpper_body_entered"]
[connection signal="body_entered" from="Frontside/FrontLower" to="." method="_on_FrontLower_body_entered"]
[connection signal="body_entered" from="Frontside/FrontUpper" to="." method="_on_FrontUpper_body_entered"]
[connection signal="body_entered" from="interact_field" to="." method="_on_interact_field_body_entered"]
[connection signal="body_exited" from="interact_field" to="." method="_on_interact_field_body_exited"]
